[tool.poetry]
name = "release_note"
version = "0.1.0"
description = "Create Github Releases from commit log"
authors = ["Haruhiko Takada <haruhiko.takada@gmail.com>"]

[tool.poetry.scripts]
main = "release_note.main:main"

[tool.poetry.dependencies]
python = "^3.8"
PyGithub = "^1.54.1"
autopep8 = "^1.5.5"
pylint = "^2.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
